New 3.1+ OBJ exporter no longer has "operator presets" nor a way to skip modifiers #96303

Closed
opened 2022-03-10 16:44:09 +01:00 by Aras Pranckevicius · 11 comments

System Information
Operating system: macOS-12.1-arm64-arm-64bit 64 Bits
Graphics card: Apple M1Max Apple 4.1 Metal - 76.3

Blender Version
Broken: version: 3.1.0, branch: master, commit date: 2022-03-08 18:16, hash: c77597cd0e
Worked: 3.0

Short description of error
OBJ file exporter in 3.0 and earlier versions had ability to have setting presets ("Operator Presets" field near the top right of the dialog), and had an option to not apply modifiers to meshes.

The new OBJ exporter in 3.1+ versions no longer has that functionality, which makes it more cumbersome to keep on applying some non-default settings.

See discussion about this in #pipeline-io-assets-module around 2022 Mar 9 .

Exact steps for others to reproduce the error

  1. File -> Export -> Wavefront OBJ
  2. Notice there's no "Operator Presets" field near top right of the dialog, and also no way to skip applying modifiers.

Also somewhat related: #96297

**System Information** Operating system: macOS-12.1-arm64-arm-64bit 64 Bits Graphics card: Apple M1Max Apple 4.1 Metal - 76.3 **Blender Version** Broken: version: 3.1.0, branch: master, commit date: 2022-03-08 18:16, hash: `c77597cd0e` Worked: 3.0 **Short description of error** OBJ file exporter in 3.0 and earlier versions had ability to have setting presets ("Operator Presets" field near the top right of the dialog), and had an option to not apply modifiers to meshes. The new OBJ exporter in 3.1+ versions no longer has that functionality, which makes it more cumbersome to keep on applying some non-default settings. See discussion about this in #pipeline-io-assets-module around [2022 Mar 9 ](https://blender.chat/channel/pipeline-assets-io-module?msg=7G73qGzxmryS8mATw). **Exact steps for others to reproduce the error** 1. File -> Export -> Wavefront OBJ 2. Notice there's no "Operator Presets" field near top right of the dialog, and also no way to skip applying modifiers. Also somewhat related: #96297
Author
Member

Added subscriber: @aras_p

Added subscriber: @aras_p

#96483 was marked as duplicate of this issue

#96483 was marked as duplicate of this issue

#96399 was marked as duplicate of this issue

#96399 was marked as duplicate of this issue
Aras Pranckevicius self-assigned this 2022-03-10 16:44:35 +01:00
Author
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

Added subscriber: @leomelodica

Added subscriber: @leomelodica

3.1 also removed (export without modifiers)

3.1 also removed (export without modifiers)
Aras Pranckevicius changed title from New 3.1+ OBJ exporter no longer has "operator presets" to New 3.1+ OBJ exporter no longer has "operator presets" nor a way to skip modifiers 2022-03-11 22:03:20 +01:00
Member

Added subscribers: @squashmvp, @PratikPB2123

Added subscribers: @squashmvp, @PratikPB2123

This issue was referenced by 27bef3ee02

This issue was referenced by 27bef3ee02ce776d4e2d00dab349444c4d394841

This issue was referenced by 70720c42c2

This issue was referenced by 70720c42c21265d88e2182eebfe5d6544d197424
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Member

Added subscriber: @MassimilianoPuliero

Added subscriber: @MassimilianoPuliero
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#96303
No description provided.