Fix T96303: C++ OBJ exporter needs presets and skip modifiers.

This patch, D14303, from Aras Pranckevicius adds presets to the OBJ exporter,
and also adds a checkbox (default on) to apply modifiers before export.