source/blender/io/wavefront_obj/IO_wavefront_obj.h
@@ -69,6 +69,7 @@ struct OBJExportParams {
 
   /* File Write Options. */
   bool export_selected_objects;
+  bool apply_modifiers;
   eEvaluationMode export_eval_mode;
   bool export_uv;
   bool export_normals;
